[SCD-84] fix: ensure dark mode compatibility
- fix: set theme via server if possible to prevent flashing between themes

- fix: show password errors in update-password-modal

- style: change default button backround color for better visibility in dark mode

- style: change background color of upload skin lesion area for better visibility in dark mode

- fix: change text color of secondary button in dark mode

- fix: use correct icon color in password-policies in dark mode

- fix: use correct background color for success toast notifications in dark mode

--- a/src/app/check-skin/page.module.css
+++ b/src/app/check-skin/page.module.css
@@ -16,6 +16,7 @@
 .uploadArea {
     display: flex;
     gap: 1rem;
+    background-color: var(--upload-area-background);
     box-shadow: 0 0 10px var(--neutral-300-a);
     padding: 0.5rem;
     align-items: center;
