--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,7 @@
 
 .article {
     padding: 4rem 0;
-    background-color: white;
+    background-color: var(--background-color);
     width: 100%;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .article:nth-of-type(even) {
-    background-color: var(--brand-100);
+    background-color: var(--background-color-level-2);
 }
 
 .section {
