--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -8,6 +8,7 @@
     --text-color-neutral: var(--neutral-800);
     --background-color: var(--neutral-100);
     --background-color-accent: var(--neutral-200);
+    --background-color-level-2: var(--brand-100);
     --background-color-level-3: var(--neutral-300);
     --navigation-background: var(--neutral-400);
     --outline-color: var(--brand-600);
@@ -21,6 +22,7 @@
     --sleek-link-color-active: var(--neutral-900);
     --sleek-link-color-visited: var(--brand-1000);
     --footer-background: var(--brand-1000);
+    --footer-color: var(--neutral-100);
 
     --border-color: var(--neutral-700);
     --border-color-light: var(--neutral-600);
@@ -104,6 +106,8 @@
 
     --spinner-background: var(--neutral-300-a);
     --spinner-color: var(--neutral-1000);
+
+    --upload-area-background: var(--neutral-100);
 }
 
 body[data-dark-mode] {
@@ -116,6 +120,7 @@ body[data-dark-mode] {
     --text-color-neutral: var(--neutral-600);
     --background-color: var(--dark-neutral-100);
     --background-color-accent: var(--dark-neutral-200);
+    --background-color-level-2: var(--dark-neutral-200);
     --background-color-level-3: var(--dark-neutral-300);
     --navigation-background: var(--dark-neutral-300);
     --outline-color: var(--brand-500);
@@ -128,7 +133,8 @@ body[data-dark-mode] {
     --sleek-link-color: var(--dark-neutral-1000);
     --sleek-link-color-active: var(--dark-neutral-900);
     --sleek-link-color-visited: var(--brand-200);
-    --footer-background: var(--brand-100);
+    --footer-background: var(--brand-800);
+    --footer-color: var(--dark-neutral-1000);
     --border-color: var(--dark-neutral-700);
     --border-color-light: var(--dark-neutral-600);
     --label-color: var(--dark-neutral-800);
@@ -137,7 +143,7 @@ body[data-dark-mode] {
     --input-border: var(--dark-neutral-800);
     --input-background: var(--dark-neutral-100);
     --default-button-color: var(--dark-neutral-1000);
-    --default-button-background: var(--dark-neutral-100-a);
+    --default-button-background: var(--dark-neutral-200-a);
     --default-button-background-hover: var(--dark-neutral-300-a);
     --default-button-background-active: var(--dark-neutral-400-a);
     --default-button-background-disabled: var(--dark-neutral-100-a);
@@ -149,7 +155,7 @@ body[data-dark-mode] {
     --primary-button-background-active: var(--brand-200);
     --primary-button-focus-outline: var(--brand-100);
 
-    --secondary-button-color: var(--dark-neutral-100-a);
+    --secondary-button-color: var(--dark-neutral-1000);
     --secondary-button-background: transparent;
     --secondary-button-background-hover: var(--dark-neutral-100-a);
     --secondary-button-background-active: var(--dark-neutral-300-a);
@@ -182,8 +188,8 @@ body[data-dark-mode] {
     --badge-text-color-malignant: var(--red-400);
     --badge-border-color-malignant: var(--red-400);
 
-    --notification-toast-success-background: var(--green-300);
-    --notification-toast-success-border: var(--green-300);
+    --notification-toast-background-success: var(--green-300);
+    --notification-toast-border-success: var(--green-300);
     --notification-toast-background-error: var(--red-300);
     --notification-toast-border-error: var(--red-300);
     --notification-toast-background-warning: var(--yellow-400);
@@ -197,7 +203,7 @@ body[data-dark-mode] {
     --notification-area-color-success: var(--green-500);
     --notification-area-background-error: var(--red-1000);
     --notification-area-border-error: var(--red-400);
-    --notification-area-color-success: var(--red-400);
+    --notification-area-color-error: var(--red-400);
     --notification-area-background-warning: var(--yellow-1000);
     --notification-area-border-warning: var(--yellow-400);
     --notification-area-color-warning: var(--yellow-400);
@@ -210,4 +216,6 @@ body[data-dark-mode] {
 
     --spinner-background: var(--dark-neutral-300-a);
     --spinner-color: var(--dark-neutral-1000);
+
+    --upload-area-background: var(--dark-neutral-200);
 }
